# liv_zones

./: README.md  SUMMARY.md  pyproject.toml
.github/workflows/: publish-docs.yml  publish_docs.yaml
docs/source/: api.rst  conf.py  features.rst  index.rst  install.rst  tutorial.rst
liv_zones/: __init__.py  ascini.py  cell.py  cell_pancreas.py  correlationMatrix.py  crop.py  crop_pancreas.py  distance_to_veins.py  extract_properties.py  models.py  organelle.py  organelle_model.py  organelle_model_pancreas.py  organelle_pancreas.py  paths.py  point.py  preprocess.py  preprocess_pancreas.py  rectangle_plot.py  rectangles.py  rectangles_local.py  run.py  run_Marktest.py  run_pancreas.py  run_segment.py  run_visualize.py  segment.py  track_z_pos.py  util.py  veincoords.py  visualize.py
liver_zonation/: extract_properties.py  run_segment.py  run_visualize.py  segment.py  visualize.py
notebooks/: 00_download_data.ipynb  01_preprocessing.ipynb  02_feature_extraction.ipynb  03_visualization.ipynb
