# https://peps.python.org/pep-0517/
# https://hatch.pypa.io/latest/config/build/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "liv_zones"
description = "Extract organelle specific features from fluorescent liver cell cross-section images"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = 'Alex Hillsley', email = 'hillsleya@janelia.hhmi.org' },
]
dynamic = ["version"]
dependencies = ["numpy", "pandas", "scikit-image", "cellpose", "matplotlib"]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff", "twine", "build"]
test = ["pytest", "pytest-cov"]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_togglebutton",
    "tomli",
    "jupyter_sphinx",
    "plotly",
    "ipykernel"
]

[project.urls]
homepage = "https://github.com/hillsleya/liv_zones"

# https://hatch.pypa.io/latest/version/
[tool.hatch.version]
path = "liv_zones/__init__.py"

# https://beta.ruff.rs/docs
[tool.ruff]
target-version = "py38"
src = ["liv_zones"]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: ${PY_MAJOR_VERSION} no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.mypy]
files = "liv_zones"
strict = false
allow_untyped_defs = true
# allow_untyped_calls = true
disallow_any_generics = false
ignore_missing_imports = true
